syntax = "proto3";
package df.plugin;

option go_package = "github.com/secmc/plugin/proto/generated";

import "common.proto";

message ActionResult {
    string correlation_id = 1;
    optional ActionStatus status = 2;
    oneof result {
        WorldEntitiesResult world_entities = 10;
        WorldPlayersResult world_players = 11;
        WorldEntitiesWithinResult world_entities_within = 12;
        WorldDefaultGameModeResult world_default_game_mode = 13;
        WorldPlayerSpawnResult world_player_spawn = 14;
    }
}

message ActionStatus {
    bool ok = 1;
    optional string error = 2;
}

message WorldEntitiesResult {
    WorldRef world = 1;
    repeated EntityRef entities = 2;
}

message WorldEntitiesWithinResult {
    WorldRef world = 1;
    BBox box = 2;
    repeated EntityRef entities = 3;
}

message WorldPlayersResult {
    WorldRef world = 1;
    repeated EntityRef players = 2;
}

message WorldDefaultGameModeResult {
    WorldRef world = 1;
    GameMode game_mode = 2;
}

message WorldPlayerSpawnResult {
    WorldRef world = 1;
    string player_uuid = 2;
    BlockPos spawn = 3;
}
